--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,13 @@
       <version>4.8.0.201706111038-r</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.46</version>
+    </dependency>
+
 
   </dependencies>
 
