--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,13 @@
       <version>1.2.46</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.9.3</version>
+    </dependency>
+
 
   </dependencies>
 
